# raduga_inter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Interpolation/: CubicSplineInterpolator.cpp  CubicSplineInterpolator.h  Interpolator.cpp  Interpolator.h  LinearInterpolator.cpp  LinearInterpolator.h  SquareInterpolator.cpp  SquareInterpolator.h
